--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container">
 
         <header>
+            <img src="svg/logoGrann.svg" alt="logoGrann">
             <nav>
                 <ul class="nav-list">
                     <li><a href="#">Каталог</a></li>
@@ -42,8 +43,184 @@
                     <li><img src="svg/facebook.svg" alt="facebook"></li>
                     <li><img src="svg/inst.svg" alt="inst"></li>
                 </ul>
+                <p>Виготовляємо десерти під замовлення з любов’ю та користю</p>
+            </section>
+            <section>
+                <ul class="food-list">
+                    <li>
+                        <img src="images/podding.png" alt="podding">
+                        <a href="#">Торти</a>
+                    </li>
+                    <li>
+                        <img src="images/shu-2.png" alt="shu">
+                        <a href="#">Шу</a>
+                    </li>
+                    <li>
+                        <img src="images/tart-2.png" alt="tart">
+                        <a href="#">Тістечка</a>
+                    </li>
+                    <li>
+                        <img src="images/pizzas.png" alt="pizzas">
+                        <a href="#">Піца</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="best-selers-section">
+                <h2>Бестселлери</h2>
+                <ul>
+                    <li>
+                        <img src="images/lemon-cake.png" alt="lemon-cake">
+                        <p>Мусовий торт “Манго-маракуйя”</p>
+                        <span>1200 грн/ 3 кг</span>
+                    </li>
+                    <li>
+                        <img src="images/browie.png" alt="browie">
+                        <p>Шоколадне тістечко брауні</p>
+                        <span>300 грн/ 3шт</span>
+                    </li>
+                    <li>
+                        <img src="images/shu-3.png" alt="lemon-cake">
+                        <p>Тістечка Шу</p>
+                        <span>400 грн/ 6 шт</span>
+                    </li>
+                </ul>
+                <a href="#">Переглянути весь асортимент</a>
+            </section>
+            <section>
+                <h2>
+                    Чому саме Grann?
+                </h2>
+                <ul>
+                    <li>
+                        <h3>ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
+                        <p>Я замовляю продукти тільки у тих постачальників, які мають сертифікати якості.</p>
+                    </li>
+                    <li>
+                        <img src="images/browie-2.png" alt="browie-2">
+                        <h3>ЗРУЧНА ВАГА ТОРТУ</h3>
+                        <p>Не обов'язково чекати на свято, щоб замовити смачненьке. Наша кондитерська робить мініторти і
+                            десерти.
+
+                            Мінімальна вага замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від 0,8 кг.</p>
+                    </li>
+                    <li>
+                        <h3>
+                            МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ
+                        </h3>
+                        <p>
+                            Якщо з якихось причин ви не вживаєте окремі продукти десерту, є можливість зробити
+                            замовлення згідно ваших побажаннь.
+                        </p>
+                    </li>
+                </ul>
+                <img src="images/wine-tart-back.png" alt="wine-tart-back">
+            </section>
+            <section>
+                <h2>Доставка і оплата</h2>
+                <ul>
+                    <li>
+                        <img src="svg/package-box.svg" alt="package-box">
+                        <h3>
+                            Самовивіз
+                        </h3>
+                        <p>
+                            Самовивіз з Печерського р-ну, м. Київ
+                        </p>
+                    </li>
+                    <li>
+                        <img src="svg/bike-delivery.svg" alt="bike-delivery">
+                        <h3>
+                            Доставка
+                        </h3>
+                        <p>
+                            Доставка на таксі (за тарифами служби таксі)
+                        </p>
+                    </li>
+                    <li>
+                        <img src="svg/money-box.svg" alt="money-box">
+                        <h3>
+                            Передплата
+                        </h3>
+                        <p>
+                            Передплата на картку в розмірі 50% від суми замовлення
+                        </p>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <img src="images/anna.jpg" alt="anna">
+                <div>
+                    <img src="svg/name.svg" alt="name-me">
+                    <h3>
+                        Анна Кострома
+                    </h3>
+                    <p>Засновниця кондитерської Grann Pastry</p>
+                    <p>
+                        Від хобі до власної справи.
+                    </p>
+                    <p>
+                        Я закінчила DGF International Culinary School в Києві, а згодом навчалася в одній з найвідоміших
+                        шкіл готельного сервісу і кулінарії в світі «Le Cordon Bleu» (Франція).Свою справу почала після
+                        того, як здобула досвід і працювала в одному з найбільших кондитерських цехів Грузії (1500
+                        кв.м.).
+
+                        Наразі започаткувала особистий бренд і будую власний кондитерський цех.Моя робота мене надихає.
+                        Завдяки моїм солодощам, я можу дарувати щасливі моменти для вас!
+                    </p>
+                </div>
+            </section>
+            <section class="unique-section">
+                <img src="svg/make-unique.svg" alt="unique">
+                <p>
+                    Ви можете замовити свій власний рецепт десерту, який вам буде до вподоби. Заповніть заявку та я
+                    зв’яжусь з вами, аби обговорити деталі замовлення.
+                </p>
+                <form>
+                    <label>
+                        <input type="text" placeholder="Ім’я">
+                    </label>
+                    <label>
+                        <input type="tel" placeholder="Номер телефону">
+                    </label>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Опишіть ваші побажання:"></textarea>
+                    <button type="submit">
+                        Надіслати
+                    </button>              
+                </form>
+            </section>
+            <section class="inst-section"> 
+                <ul>
+                    <li><img src="images/instagram/tart-inst.jpg" alt="inst-tart"></li>
+                    <li><img src="images/instagram/dough.jpeg" alt="dough"></li>
+                    <li><img src="images/instagram/lunch-inst.jpg" alt="lunch-inst"></li>
+                    <li><img src="images/instagram/chees-cake-inst.jpg" alt="chees-cake-inst"></li>
+                    <li><img src="images/instagram/napoleon-inst.jpg" alt="napoleon-inst"></li>
+                    <li><img src="images/instagram/anna-ints.jpg" alt="anna-ints"></li>
+                </ul>
+                <a href="#">Завітати на сторінку</a>
             </section>
         </main>
+        <footer class="footer">
+            <p>
+                с. Хотів, вул. Партизанська 1А
+            </p>
+            <a href="mailto:kostromaganna@gmail.com">Email: kostromaganna@gmail.com</a>
+            <a href="tel:+380999876240">Tel: +38(099) 987 62 40</a>
+            <img src="svg/logoGrann.svg" alt="logoGrann">
+            <ul>
+                <li>
+                    <img src="svg/inst.svg" alt="inst">
+                </li>
+                <li>
+                    <img src="svg/teleg.svg" alt="teleg">
+                </li>
+                <li>
+                    <img src="svg/viber.svg" alt="viber">
+                </li>
+            </ul>
+            <a href="#">Політика конфіденційності</a>
+            <a href="#">Договір оферти</a>
+        </footer>
     </div>
 </body>
 
