--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
         </section>
         <section>
           <ul class="food-list">
-            <li>
+            <li class="food-item">
               <img src="images/podding.png" alt="podding" />
               <a href="#">Торти</a>
             </li>
-            <li>
+            <li class="food-item">
               <img src="images/shu-2.png" alt="shu" />
               <a href="#">Шу</a>
             </li>
-            <li>
+            <li class="food-item">
               <img src="images/tart-2.png" alt="tart" />
               <a href="#">Тістечка</a>
             </li>
-            <li>
+            <li class="food-item">
               <img src="images/pizzas.png" alt="pizzas" />
               <a href="#">Піца</a>
             </li>
