--- a/index.html
+++ b/index.html
@@ -1,247 +1,230 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grann</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <div class="container">
-      <header class="header">
-        <nav>
-          <ul class="nav-list">
-            <li>
-                <a class="nav-a" href="#">Каталог</a>
-            </li>
-            <li>
-                <a class="nav-a" href="#">Про мене</a>
-            </li>
-            <li>
-              <img src="svg/logoGrann.svg" alt="logoGrann" />
-            </li>
-            <li>
-                <a class="nav-a" href="#">Доставка</a>
-            </li>
-            <li>
-                <a class="nav-a" href="#">Контакти</a>
-            </li>
-            <li>
-                <img src="svg/Shopping-cart.svg" alt="Shopping-cart">
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main>
-        <section class="desert-section">
-          <h1 class="author-desert">Авторські десерти</h1>
-          <ul class="picture-list">
-            <li><img class="shu" src="images/shu.png" alt="shu" /></li>
-            <li><img class="cake" src="images/cake.png" alt="cake" /></li>
-            <li><img class="cream-spoon" src="images/cream-spoon.png" alt="cream-spoon" /></li>
-            <li><img class="tart" src="images/tart.png" alt="tart" /></li>
-          </ul>
-          <ul class="social-list">
-            <li><img src="svg/teleg.svg" alt="teleg" /></li>
-            <li><img src="svg/facebook.svg" alt="facebook" /></li>
-            <li><img src="svg/inst.svg" alt="inst" /></li>
-          </ul>
-          <p>Виготовляємо десерти під замовлення з любов’ю та користю</p>
-        </section>
-        <section>
-          <ul class="food-list">
-            <li class="food-item">
-              <img src="images/podding.png" alt="podding" />
-              <a href="#">Торти</a>
-            </li>
-            <li class="food-item">
-              <img src="images/shu-2.png" alt="shu" />
-              <a href="#">Шу</a>
-            </li>
-            <li class="food-item">
-              <img src="images/tart-2.png" alt="tart" />
-              <a href="#">Тістечка</a>
-            </li>
-            <li class="food-item">
-              <img src="images/pizzas.png" alt="pizzas" />
-              <a href="#">Піца</a>
-            </li>
-          </ul>
-        </section>
-        <section class="best-selers-section">
-          <h2>Бестселлери</h2>
-          <ul>
-            <li>
-              <img src="images/lemon-cake.png" alt="lemon-cake" />
-              <p>Мусовий торт “Манго-маракуйя”</p>
-              <span>1200 грн/ 3 кг</span>
-            </li>
-            <li>
-              <img src="images/browie.png" alt="browie" />
-              <p>Шоколадне тістечко брауні</p>
-              <span>300 грн/ 3шт</span>
-            </li>
-            <li>
-              <img src="images/shu-3.png" alt="lemon-cake" />
-              <p>Тістечка Шу</p>
-              <span>400 грн/ 6 шт</span>
-            </li>
-          </ul>
-          <a href="#">Переглянути весь асортимент</a>
-        </section>
-        <section>
-          <h2>Чому саме Grann?</h2>
-          <ul>
-            <li>
-              <h3>ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
-              <p>
-                Я замовляю продукти тільки у тих постачальників, які мають
-                сертифікати якості.
-              </p>
-            </li>
-            <li>
-              <img src="images/browie-2.png" alt="browie-2" />
-              <h3>ЗРУЧНА ВАГА ТОРТУ</h3>
-              <p>
-                Не обов'язково чекати на свято, щоб замовити смачненьке. Наша
-                кондитерська робить мініторти і десерти. Мінімальна вага
-                замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від
-                0,8 кг.
-              </p>
-            </li>
-            <li>
-              <h3>МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</h3>
-              <p>
-                Якщо з якихось причин ви не вживаєте окремі продукти десерту, є
-                можливість зробити замовлення згідно ваших побажаннь.
-              </p>
-            </li>
-          </ul>
-          <img class="wine-tart-back" src="images/wine-tart-back.png" alt="wine-tart-back" />
-        </section>
-        <section>
-          <h2>Доставка і оплата</h2>
-          <ul>
-            <li>
-              <img src="svg/package-box.svg" alt="package-box" />
-              <h3>Самовивіз</h3>
-              <p>Самовивіз з Печерського р-ну, м. Київ</p>
-            </li>
-            <li>
-              <img src="svg/bike-delivery.svg" alt="bike-delivery" />
-              <h3>Доставка</h3>
-              <p>Доставка на таксі (за тарифами служби таксі)</p>
-            </li>
-            <li>
-              <img src="svg/money-box.svg" alt="money-box" />
-              <h3>Передплата</h3>
-              <p>Передплата на картку в розмірі 50% від суми замовлення</p>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <img src="images/anna.jpg" alt="anna" />
-          <div>
-            <img src="svg/name.svg" alt="name-me" />
-            <h3>Анна Кострома</h3>
-            <p>Засновниця кондитерської Grann Pastry</p>
-            <p>Від хобі до власної справи.</p>
-            <p>
-              Я закінчила DGF International Culinary School в Києві, а згодом
-              навчалася в одній з найвідоміших шкіл готельного сервісу і
-              кулінарії в світі «Le Cordon Bleu» (Франція).Свою справу почала
-              після того, як здобула досвід і працювала в одному з найбільших
-              кондитерських цехів Грузії (1500 кв.м.). Наразі започаткувала
-              особистий бренд і будую власний кондитерський цех.Моя робота мене
-              надихає. Завдяки моїм солодощам, я можу дарувати щасливі моменти
-              для вас!
-            </p>
-          </div>
-        </section>
-        <section class="unique-section">
-          <img src="svg/make-unique.svg" alt="unique" />
-          <p>
-            Ви можете замовити свій власний рецепт десерту, який вам буде до
-            вподоби. Заповніть заявку та я зв’яжусь з вами, аби обговорити
-            деталі замовлення.
-          </p>
-          <form>
-            <label>
-              <input type="text" placeholder="Ім’я" />
-            </label>
-            <label>
-              <input type="tel" placeholder="Номер телефону" />
-            </label>
-            <textarea
-              name=""
-              id=""
-              cols="30"
-              rows="10"
-              placeholder="Опишіть ваші побажання:"
-            ></textarea>
-            <button type="submit">Надіслати</button>
-          </form>
-        </section>
-        <section class="inst-section">
-          <ul>
-            <li>
-              <img src="images/instagram/tart-inst.jpg" alt="inst-tart" />
-            </li>
-            <li><img src="images/instagram/dough.jpeg" alt="dough" /></li>
-            <li>
-              <img src="images/instagram/lunch-inst.jpg" alt="lunch-inst" />
-            </li>
-            <li>
-              <img
-                src="images/instagram/chees-cake-inst.jpg"
-                alt="chees-cake-inst"
-              />
-            </li>
-            <li>
-              <img
-                src="images/instagram/napoleon-inst.jpg"
-                alt="napoleon-inst"
-              />
-            </li>
-            <li>
-              <img src="images/instagram/anna-ints.jpg" alt="anna-ints" />
-            </li>
-          </ul>
-          <a href="#">Завітати на сторінку</a>
-        </section>
-      </main>
-      <footer class="footer">
-        <p>с. Хотів, вул. Партизанська 1А</p>
-        <a href="mailto:kostromaganna@gmail.com"
-          >Email: kostromaganna@gmail.com</a
-        >
-        <a href="tel:+380999876240">Tel: +38(099) 987 62 40</a>
-        <img src="svg/logoGrann.svg" alt="logoGrann" />
-        <ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Grann</title>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="container">
+    <header class="header">
+      <nav>
+        <ul class="nav-list">
           <li>
-            <img src="svg/inst.svg" alt="inst" />
+            <a class="nav-a" href="#">Каталог</a>
           </li>
           <li>
-            <img src="svg/teleg.svg" alt="teleg" />
+            <a class="nav-a" href="#">Про мене</a>
           </li>
           <li>
-            <img src="svg/viber.svg" alt="viber" />
+            <img src="svg/logoGrann.svg" alt="logoGrann" />
+          </li>
+          <li>
+            <a class="nav-a" href="#">Доставка</a>
+          </li>
+          <li>
+            <a class="nav-a" href="#">Контакти</a>
+          </li>
+          <li>
+            <img src="svg/Shopping-cart.svg" alt="Shopping-cart">
           </li>
         </ul>
-        <a href="#">Політика конфіденційності</a>
-        <a href="#">Договір оферти</a>
-      </footer>
-    </div>
-  </body>
+      </nav>
+    </header>
+    <main>
+      <section class="desert-section">
+        <h1 class="author-desert">Авторські десерти</h1>
+        <ul class="picture-list">
+          <li><img class="shu" src="images/shu.png" alt="shu" /></li>
+          <li><img class="cake" src="images/cake.png" alt="cake" /></li>
+          <li><img class="cream-spoon" src="images/cream-spoon.png" alt="cream-spoon" /></li>
+          <li><img class="tart" src="images/tart.png" alt="tart" /></li>
+        </ul>
+        <ul class="social-list">
+          <li><img src="svg/teleg.svg" alt="teleg" /></li>
+          <li><img src="svg/facebook.svg" alt="facebook" /></li>
+          <li><img src="svg/inst.svg" alt="inst" /></li>
+        </ul>
+        <p>Виготовляємо десерти під замовлення з любов’ю та користю</p>
+      </section>
+      <section>
+        <ul class="food-list">
+          <li class="food-item">
+            <img class="food-img" src="images/podding.png" alt="podding" />
+            <a class="food-a" href="#">Торти</a>
+          </li>
+          <li class="food-item">
+            <img class="food-img" src="images/shu-2.png" alt="shu" />
+            <a class="food-a" href="#">Шу</a>
+          </li>
+          <li class="food-item">
+            <img class="food-img" src="images/tart-2.png" alt="tart" />
+            <a class="food-a" href="#">Тістечка</a>
+          </li>
+          <li class="food-item">
+            <img class="food-img" src="images/pizzas.png" alt="pizzas" />
+            <a class="food-a" href="#">Піца</a>
+          </li>
+        </ul>
+      </section>
+      <section class="best-selers-section">
+        <h2 class="best-h2">Бестселлери</h2>
+        <ul class="best-list">
+          <li class="best-item">
+            <img class="best-img" src="images/lemon-cake.png" alt="lemon-cake" />
+            <p class="best-p">Мусовий торт “<br> Манго-маракуйя”</p>
+            <span class="best-price">1200 грн/ 3 кг</span>
+          </li>
+          <li class="best-item">
+            <img class="best-img" src="images/browie.png" alt="browie" />
+            <p class="best-p">Шоколадне тістечко <br> брауні</p>
+            <span class="best-price">300 грн/ 3шт</span>
+          </li>
+          <li class="best-item">
+            <img class="best-img" src="images/shu-3.png" alt="lemon-cake" />
+            <p class="best-p">Тістечка Шу</p>
+            <span class="best-price">400 грн/ 6 шт</span>
+          </li>
+        </ul>
+        <a class="best-a" href="#">Переглянути весь асортимент</a>
+      </section>
+      <section>
+        <h2 class="why-h2">Чому саме Grann?</h2>
+        <ul class="why-list">
+          <li class="why-item why-item-1">
+            <h3 class="why-h3">ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
+            <p class="why-p">
+              Я замовляю продукти тільки у тих постачальників, які мають
+              сертифікати якості.
+            </p>
+          </li>
+          <li class="why-item why-item-2">
+            <img class="why-img" src="images/browie-2.png" alt="browie-2" />
+            <h3 class="why-h3-ex">ЗРУЧНА ВАГА ТОРТУ</h3>
+            <p class="why-p why-p-ex">
+              Не обов'язково чекати на свято, щоб замовити смачненьке. Наша
+              кондитерська робить мініторти і десерти. <br> <br>  Мінімальна вага
+              замовлення:Наполеон і медовик - від 0,5 кг.Мусові торти - від
+              0,8 кг.
+            </p>
+          </li>
+          <li class="why-item why-item-3">
+            <h3 class="why-h3">МОЖЛИВІСТЬ ЗАМОВИТИ ДЕСЕРТ ЗГІДНО ВАШИХ ПОБАЖАННЬ</h3>
+            <p class="why-p">
+              Якщо з якихось причин ви не вживаєте окремі продукти десерту, є
+              можливість зробити замовлення згідно ваших побажаннь.
+            </p>
+          </li>
+        </ul>
+        <img class="wine-tart-back" src="images/wine-tart-back.png" alt="wine-tart-back" />
+      </section>
+      <section>
+        <h2 class="dilivery-h2">Доставка і оплата</h2>
+        <ul class="dilivery-list">
+          <li class="dilivery-item">
+            <img class="dilivery-svg" src="svg/package-box.svg" alt="package-box" />
+            <h3 class="dilivery-h3">Самовивіз</h3>
+            <p class="dilivery-p">Самовивіз з Печерського р-ну, м. Київ</p>
+          </li>
+          <li class="dilivery-item">
+            <img class="dilivery-svg" src="svg/bike-delivery.svg" alt="bike-delivery" />
+            <h3 class="dilivery-h3">Доставка</h3>
+            <p class="dilivery-p">Доставка на таксі (за тарифами служби таксі)</p>
+          </li>
+          <li class="dilivery-item">
+            <img class="dilivery-svg" src="svg/money-box.svg" alt="money-box" />
+            <h3 class="dilivery-h3">Передплата</h3>
+            <p class="dilivery-p">Передплата на картку в розмірі 50% від суми замовлення</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <img src="images/anna.jpg" alt="anna" />
+        <div>
+          <img src="svg/name.svg" alt="name-me" />
+          <h3>Анна Кострома</h3>
+          <p>Засновниця кондитерської Grann Pastry</p>
+          <p>Від хобі до власної справи.</p>
+          <p>
+            Я закінчила DGF International Culinary School в Києві, а згодом
+            навчалася в одній з найвідоміших шкіл готельного сервісу і
+            кулінарії в світі «Le Cordon Bleu» (Франція).Свою справу почала
+            після того, як здобула досвід і працювала в одному з найбільших
+            кондитерських цехів Грузії (1500 кв.м.). Наразі започаткувала
+            особистий бренд і будую власний кондитерський цех.Моя робота мене
+            надихає. Завдяки моїм солодощам, я можу дарувати щасливі моменти
+            для вас!
+          </p>
+        </div>
+      </section>
+      <section class="unique-section">
+        <img src="svg/make-unique.svg" alt="unique" />
+        <p>
+          Ви можете замовити свій власний рецепт десерту, який вам буде до
+          вподоби. Заповніть заявку та я зв’яжусь з вами, аби обговорити
+          деталі замовлення.
+        </p>
+        <form>
+          <label>
+            <input type="text" placeholder="Ім’я" />
+          </label>
+          <label>
+            <input type="tel" placeholder="Номер телефону" />
+          </label>
+          <textarea name="" id="" cols="30" rows="10" placeholder="Опишіть ваші побажання:"></textarea>
+          <button type="submit">Надіслати</button>
+        </form>
+      </section>
+      <section class="inst-section">
+        <ul>
+          <li>
+            <img src="images/instagram/tart-inst.jpg" alt="inst-tart" />
+          </li>
+          <li><img src="images/instagram/dough.jpeg" alt="dough" /></li>
+          <li>
+            <img src="images/instagram/lunch-inst.jpg" alt="lunch-inst" />
+          </li>
+          <li>
+            <img src="images/instagram/chees-cake-inst.jpg" alt="chees-cake-inst" />
+          </li>
+          <li>
+            <img src="images/instagram/napoleon-inst.jpg" alt="napoleon-inst" />
+          </li>
+          <li>
+            <img src="images/instagram/anna-ints.jpg" alt="anna-ints" />
+          </li>
+        </ul>
+        <a href="#">Завітати на сторінку</a>
+      </section>
+    </main>
+    <footer class="footer">
+      <p>с. Хотів, вул. Партизанська 1А</p>
+      <a href="mailto:kostromaganna@gmail.com">Email: kostromaganna@gmail.com</a>
+      <a href="tel:+380999876240">Tel: +38(099) 987 62 40</a>
+      <img src="svg/logoGrann.svg" alt="logoGrann" />
+      <ul>
+        <li>
+          <img src="svg/inst.svg" alt="inst" />
+        </li>
+        <li>
+          <img src="svg/teleg.svg" alt="teleg" />
+        </li>
+        <li>
+          <img src="svg/viber.svg" alt="viber" />
+        </li>
+      </ul>
+      <a href="#">Політика конфіденційності</a>
+      <a href="#">Договір оферти</a>
+    </footer>
+  </div>
+</body>
+
 </html>
