added some style to the website

--- a/index.html
+++ b/index.html
@@ -184,46 +184,55 @@
         </form>
       </section>
       <section class="inst-section">
-        <ul>
-          <li>
+        <ul class="inst-list">
+          <li class="inst-item">
             <img src="images/instagram/tart-inst.jpg" alt="inst-tart" />
           </li>
-          <li><img src="images/instagram/dough.jpeg" alt="dough" /></li>
+          <li class="inst-item"><img src="images/instagram/dough.jpeg" alt="dough" /></li>
           <li>
             <img src="images/instagram/lunch-inst.jpg" alt="lunch-inst" />
           </li>
-          <li>
+          <li class="inst-item">
             <img src="images/instagram/chees-cake-inst.jpg" alt="chees-cake-inst" />
           </li>
-          <li>
+          <li class="inst-item">
             <img src="images/instagram/napoleon-inst.jpg" alt="napoleon-inst" />
           </li>
-          <li>
+          <li class="inst-item">
             <img src="images/instagram/anna-ints.jpg" alt="anna-ints" />
           </li>
         </ul>
-        <a href="#">Завітати на сторінку</a>
+        <a class="inst-a" href="#">Завітати на сторінку</a>
+        <img class="giigle-line" src="svg/giigle-line.svg" alt="giigle-line">
+        <img class="line-top" src="svg/line-top.svg" alt="line-top">
+        <img class="line-bottom" src="svg/line-bottom.svg" alt="line-bottom">
       </section>
     </main>
     <footer class="footer">
-      <p>с. Хотів, вул. Партизанська 1А</p>
-      <a href="mailto:kostromaganna@gmail.com">Email: kostromaganna@gmail.com</a>
-      <a href="tel:+380999876240">Tel: +38(099) 987 62 40</a>
-      <img src="svg/logoGrann.svg" alt="logoGrann" />
-      <ul>
-        <li>
-          <img src="svg/inst.svg" alt="inst" />
-        </li>
-        <li>
-          <img src="svg/teleg.svg" alt="teleg" />
-        </li>
-        <li>
-          <img src="svg/viber.svg" alt="viber" />
-        </li>
-      </ul>
-      <a href="#">Політика конфіденційності</a>
-      <a href="#">Договір оферти</a>
-    </footer>
+      <div class="foot-div">
+        <p>с. Хотів, вул. Партизанська 1А</p>
+        <a class="foot-a" href="mailto:kostromaganna@gmail.com">Email: kostromaganna@gmail.com</a>
+        <br>
+        <a class="foot-a" href="tel:+380999876240">Tel: +38(099) 987 62 40</a>
+      </div>
+        <img class="foot-logo" src="svg/logoGrann.svg" alt="logoGrann" />
+        <div class="foot-div-2">
+          <ul class="footer-list">
+            <li class="footer-item">
+              <img class="foot-inst" src="svg/Inst-2.svg" alt="inst" />
+            </li>
+            <li class="footer-item">
+              <img class="foot-teleg" src="svg/teleg-2.svg" alt="teleg" />
+            </li>
+            <li class="footer-item">
+              <img src="svg/viber.svg" alt="viber" />
+            </li>
+          </ul>
+          <a class="foot-a" href="#">Політика конфіденційності</a>
+          <br>
+          <a class="foot-a" href="#">Договір оферти</a>
+        </div>
+        </footer>
   </div>
 </body>
 
