added some possitions but it might be not right because im on my seond pc.

--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
         </ul>
       </section>
       <section>
-        <img src="images/anna.jpg" alt="anna" />
-        <div>
+        <img class="anna-img" src="images/anna.jpg" alt="anna" />
+        <div class="name-div">
           <img src="svg/name.svg" alt="name-me" />
-          <h3>Анна Кострома</h3>
-          <p>Засновниця кондитерської Grann Pastry</p>
-          <p>Від хобі до власної справи.</p>
-          <p>
+          <h3 class="name-anna">Анна Кострома</h3>
+          <p class="name-p">Засновниця кондитерської Grann Pastry</p>
+          <p class="name-p-2">Від хобі до власної справи.</p>
+          <p class="name-p-3">
             Я закінчила DGF International Culinary School в Києві, а згодом
             навчалася в одній з найвідоміших шкіл готельного сервісу і
             кулінарії в світі «Le Cordon Bleu» (Франція).Свою справу почала
@@ -167,20 +167,20 @@
       </section>
       <section class="unique-section">
         <img src="svg/make-unique.svg" alt="unique" />
-        <p>
+        <p class="unique-p">
           Ви можете замовити свій власний рецепт десерту, який вам буде до
           вподоби. Заповніть заявку та я зв’яжусь з вами, аби обговорити
           деталі замовлення.
         </p>
         <form>
           <label>
-            <input type="text" placeholder="Ім’я" />
+            <input class="unique-name" type="text" placeholder="Ім’я" />
           </label>
           <label>
-            <input type="tel" placeholder="Номер телефону" />
+            <input class="unique-tel" type="tel" placeholder="Номер телефону" />
           </label>
-          <textarea name="" id="" cols="30" rows="10" placeholder="Опишіть ваші побажання:"></textarea>
-          <button type="submit">Надіслати</button>
+          <textarea class="textarea-u" name="" id="" cols="30" rows="10" placeholder="Опишіть ваші побажання:"></textarea>
+          <button class="button-u" type="submit">Надіслати</button>
         </form>
       </section>
       <section class="inst-section">
