--- a/index.html
+++ b/index.html
@@ -186,6 +186,66 @@
           <button class="button-u" type="submit">Надіслати</button>
         </form>
       </section>
+      <section class="q-section">
+        <h2 class="q-h2">
+          Популярні запитання
+        </h2>
+        <div class="accordion">
+          <div class="accordion-item">
+            <div class="accordion-title">СКІЛЬКИ ЧАСУ ПОТРІБНО ДЛЯ ВИГОТОВЛЕННЯ ЗАМОВЛЕННЯ?
+              <span class="arrow">
+                <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M7 10l5 5 5-5z" />
+                </svg>
+              </span>
+            </div>
+
+            <div class="accordion-content">
+              <p>Замовлення необхідно зробити як мінімум за 3-4 дні до вашого свята.</p>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <div class="accordion-title">ЧИ Є У ВАС ДОСТАВКА?
+              <span class="arrow">
+                <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M7 10l5 5 5-5z" />
+                </svg>
+              </span>
+            </div>
+
+            <div class="accordion-content">
+              <p>так, ми цього не робимо</p>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <div class="accordion-title">ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?
+              <span class="arrow">
+                <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M7 10l5 5 5-5z" />
+                </svg>
+              </span>
+            </div>
+
+            <div class="accordion-content">
+              <p>Звичайно, я
+                навіть не знаю, що таке мастика</p>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <div class="accordion-title">ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?
+              <span class="arrow">
+                <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <path d="M7 10l5 5 5-5z" />
+                </svg>
+              </span>
+            </div>
+
+            <div class="accordion-content">
+              <p></p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="inst-section">
         <h2 class="inst-h2">Instagram</h2>
         <ul class="inst-list">
@@ -240,6 +300,7 @@
       </div>
     </footer>
   </div>
+  <script src="acordion.js"></script>
 </body>
 
 </html>
