added waves (not finished comit)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
         </ul>
       </nav>
     </header>
-    <main>
+
+    <iframe class="iframe" width="401" height="215" src="https://www.youtube.com/embed/A-E7TsAkUT4?si=CtT8Awc8QWYAJfou"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <main class="main">
       <section class="desert-section">
         <h1 class="author-desert">Авторські десерти</h1>
         <ul class="picture-list">
@@ -54,8 +59,23 @@
           <li class="social-item"><img src="svg/inst.svg" alt="inst" /></li>
         </ul>
         <p class="social-p">Виготовляємо десерти під<br> замовлення з любов’ю та користю</p>
+        <div class="custom-shape-divider-top-1711279256">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path
+              d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+              opacity=".25" class="shape-fill"></path>
+            <path
+              d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+              opacity=".5" class="shape-fill"></path>
+            <path
+              d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+              class="shape-fill"></path>
+          </svg>
+        </div>
       </section>
+
       <section>
+
         <ul class="food-list">
           <li class="food-item">
             <img class="food-img" src="images/podding.png" alt="podding" />
@@ -96,8 +116,21 @@
         </ul>
         <a class="best-a" href="#">Переглянути весь асортимент</a>
       </section>
-      <section>
+      <section class="why-section">
         <h2 class="why-h2">Чому саме Grann?</h2>
+        <div class="custom-shape-divider-bottom-1711283766">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path
+              d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z"
+              opacity=".25" class="shape-fill"></path>
+            <path
+              d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z"
+              opacity=".5" class="shape-fill"></path>
+            <path
+              d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z"
+              class="shape-fill"></path>
+          </svg>
+        </div>
         <ul class="why-list">
           <li class="why-item why-item-1">
             <h3 class="why-h3">ВСІ ІНГРЕДІЄНТИ СВІЖІ ТА ЯКІСНІ!</h3>
@@ -220,8 +253,8 @@
           <div class="accordion-item">
             <div class="accordion-title">ЧИ ГОТУЄТЕ ВИ ТОРТИ З МАСТИКИ?
               <span class="arrow">
-                <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                  <path d="M7 10l5 5 5-5z" />
+                <!-- <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> -->
+                <path d="M7 10l5 5 5-5z" />
                 </svg>
               </span>
             </div>
@@ -232,7 +265,7 @@
             </div>
           </div>
           <div class="accordion-item">
-            <div class="accordion-title">ЧИ МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?
+            <div class="accordion-title">ЧИ HE МОЖНА ЇСТИ ВАШІ ТОРТИ ДІТЯМ ТА ВАГІТНИМ?
               <span class="arrow">
                 <svg class="arrow-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                   <path d="M7 10l5 5 5-5z" />
@@ -241,7 +274,7 @@
             </div>
 
             <div class="accordion-content">
-              <p></p>
+              <p>HET МОЖНA</p>
             </div>
           </div>
         </div>
